<resources>
    <string name="app_name">fancaidan</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <!-- SIDENAV STRINGS -->
    <string name="home">Home</string>
    <string name="translate_menu">Translate a Menu</string>
    <string name="menu_history">Menu History</string>
    <string name="help">How To Use</string>
    <string name="settings">Settings</string>

    <!-- CONFIRM ACTIVITY STRINGS -->
    <string name="image_picker_error">Something is wrong with that image. Pick a different one please.</string>
    <string name="loading_message">Loading Image</string>
    <string name="dialog_fire_missiles">Are you sure to delete this image?</string>
    <string name="fire">Yes</string>
    <string name="cancel">No</string>
    <string name="select_lang">Select language to translate to</string>
    <string name="cfm_location">Where is this?</string>

    <string name="title_activity_settings">Settings</string>

    <!-- General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_location">Enable location access</string>
    <string name="pref_description_location">
        Allows automatic location detection for translated menus
    </string>

    <string name="pref_title_language">Choose app language</string>
    <string-array name="list_preference_language">
        <item>English</item>
        <item>简体中文</item>
        <item>日本語</item>
    </string-array>

    <string-array name="list_preference_language_values">
        <item>en</item>
        <item>zh_CN</item>
        <item>ja</item>
    </string-array>


    <string name="title_activity_confirm">Confirmation</string>
    <string name="menu_items">Menu Items</string>
    <string name="menu_order">View Order</string>
    <string name="order_forme">Say my order</string>
    <string name="order_clear">Clear All</string>
    <string name="order_empty">No orders. Please add some items from the previous page.</string>

    <string name="title_activity_menu">Translated Menu</string>
    <string name="title_activity_order">My Order</string>

    <string name="error_nodetect">No text detected.</string>
    <string name="progress_detect">Processing Image&#8230;</string>
    <string name="progress_translate">Translating&#8230;</string>
    <string name="progress_done">Done!</string>

    <string name="title_activity_history">Menu History</string>
    <string name="history_location">Unknown Location</string>
    <string name="history_none">No menus in history.</string>

    <string name="title_activity_see">Original Menu</string>

    <string name="title_activity_usage">How to Use</string>
    <string name="use_go">Try it now!</string>
</resources>
