<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
        <group android:id="@+id/top" android:checkableBehavior="single">
            <item
                android:id="@+id/nav_home"
                android:icon="@drawable/ic_home"
                android:title="@string/home" />
            <item
                android:id="@+id/nav_translate"
                android:icon="@drawable/ic_translate"
                android:title="@string/translate_menu" />
            <item
                android:id="@+id/nav_history"
                android:icon="@drawable/ic_history"
                android:title="@string/menu_history" />
            <item
                android:id="@+id/nav_help"
                android:icon="@drawable/ic_help"
                android:title="@string/help" />
        </group>
        <group android:id="@+id/bottom" android:checkableBehavior="single">
            <item
                android:id="@+id/nav_settings"
                android:icon="@drawable/ic_settings"
                android:title="@string/settings" />
        </group>
</menu>
