<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.kkontagion.flipmenu.OrderActivity">

    <TextView
        android:id="@+id/bt_clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:drawableTint="@color/colorAccent"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center_vertical"
        android:padding="@dimen/item_space"
        android:text="@string/order_clear"
        android:textAppearance="@android:style/TextAppearance.Material.Button"
        android:textColor="@color/colorAccent" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/bt_clear"
        android:paddingBottom="@dimen/fab_clear"
        android:clipToPadding="false"
        app:layoutManager="android.support.v7.widget.LinearLayoutManager" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        android:adjustViewBounds="true"
        android:tint="@android:color/white"
        android:tooltipText="@string/order_forme"
        app:fabSize="normal"
        app:srcCompat="@drawable/ic_speak_solid" />

    <TextView
        android:id="@+id/tv_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerInParent="true"
        android:layout_margin="@dimen/item_space"
        android:text="@string/order_empty"
        android:textAlignment="center"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:visibility="gone" />

</RelativeLayout>
